namespace Chess.Enums;
public enum PieceColor
{
    White,
    Black
}